--- a/src/index.css
+++ b/src/index.css
@@ -67,7 +67,7 @@ button:focus-visible {
   a:hover {
     color: #747bff;
   }
-  button {
+  /* button {
     background-color: #f9f9f9;
-  }
+  } */
 }
